Corrections à l'alignement de la présentation

--- a/sass/Layout/_banner.scss
+++ b/sass/Layout/_banner.scss
@@ -19,7 +19,7 @@
 		width: 100%;
 		height: 100%;
 		background-size: 2;
-		background-position: -400px 800px;
+		background-position: 0 800px;
 	}
 
 	&__title {
