--- a/sass/Layout/_presentation.scss
+++ b/sass/Layout/_presentation.scss
@@ -1,12 +1,16 @@
 .presentation {
-	margin: 70px 20px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	max-width: 1000px;
+	margin: 70px auto;
+
 	&__title {
 		display: block;
 		color: $secondary-text-color;
 		font-size: 22px;
 		font-weight: 400;
 		text-align: center;
-		margin: auto 140px;
 	}
 	&__desc {
 		display: flex;
