--- a/sass/main.css
+++ b/sass/main.css
@@ -88,7 +88,11 @@ body {
 }
 
 .presentation {
-  margin: 70px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 1000px;
+  margin: 70px auto;
 }
 .presentation__title {
   display: block;
@@ -96,7 +100,6 @@ body {
   font-size: 22px;
   font-weight: 400;
   text-align: center;
-  margin: auto 140px;
 }
 .presentation__desc {
   display: flex;
@@ -124,7 +127,7 @@ body {
   width: 100%;
   height: 100%;
   background-size: 2;
-  background-position: -400px 800px;
+  background-position: 0 800px;
 }
 .banner__title {
   color: rgb(243, 151, 108);
